# weather_v2

./: CMakeLists.txt  MQTT_module.c  MQTT_module.h  main.c  time_synchronization.h  weather_module.c  weather_module.h
include/: MQTT_module.h
src/: MQTT_module.c  time_synchronization.c  weather_module.c
